--- a/static/index.html
+++ b/static/index.html
@@ -6,23 +6,66 @@
     <meta name="description" content="Data Cross-Reference Platform - Analyze correlations between technology, finance, agriculture, and weather data">
     <title>Data Cross-Reference Platform</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
     <script src="https://cdn.plot.ly/plotly-2.27.0.min.js"></script>
     <script src="/static/config.js"></script>
     <link rel="stylesheet" href="/static/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <header class="py-3">
-            <h1 class="text-center">Data Cross-Reference Platform</h1>
-        </header>
-        
+    <!-- Navigation -->
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top">
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <i class="fas fa-chart-line"></i> DataViz Platform
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#tech">Tech & Finance</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#agriculture">Agriculture & Weather</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#about">About</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    <!-- Hero Section -->
+    <section class="hero">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-lg-6">
+                    <h1>Data Cross-Reference Platform</h1>
+                    <p class="hero-text">Discover meaningful correlations between technology, finance, agriculture, and weather data through interactive visualizations.</p>
+                </div>
+                <div class="col-lg-6">
+                    <div class="hero-image">
+                        <i class="fas fa-database"></i>
+                        <i class="fas fa-chart-bar"></i>
+                        <i class="fas fa-cloud-sun"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Main Content -->
+    <div class="container main-content">
         <!-- Tabs -->
         <nav class="nav nav-tabs mb-4" id="analysisTab" role="tablist">
             <button class="nav-link active" id="tech-tab" data-bs-toggle="tab" data-bs-target="#tech" type="button" role="tab" aria-controls="tech" aria-selected="true">
-                Technology & Finance
+                <i class="fas fa-microchip"></i> Technology & Finance
             </button>
             <button class="nav-link" id="agriculture-tab" data-bs-toggle="tab" data-bs-target="#agriculture" type="button" role="tab" aria-controls="agriculture" aria-selected="false">
-                Agriculture & Weather
+                <i class="fas fa-leaf"></i> Agriculture & Weather
             </button>
         </nav>
 
@@ -33,9 +76,9 @@
                 <div class="row">
                     <!-- Tech Controls -->
                     <div class="col-md-3">
-                        <div class="card">
+                        <div class="card control-card">
                             <div class="card-header">
-                                <h5 class="mb-0">Technology & Finance Analysis</h5>
+                                <h5 class="mb-0"><i class="fas fa-sliders-h"></i> Analysis Controls</h5>
                             </div>
                             <div class="card-body">
                                 <!-- Tech Category Selection -->
@@ -67,7 +110,7 @@
                                     </select>
                                 </div>
                                 <button id="analyzeTech" class="btn btn-primary w-100" disabled>
-                                    Analyze Correlation
+                                    <i class="fas fa-chart-line"></i> Analyze Correlation
                                 </button>
                             </div>
                         </div>
@@ -75,10 +118,9 @@
 
                     <!-- Tech Visualization Area -->
                     <div class="col-md-9">
-                        <div class="card">
+                        <div class="card visualization-card">
                             <div class="card-body">
                                 <div id="techVisualization" style="width: 100%; height: 600px;">
-                                    <div class="alert alert-info">Please select a category, company, and metric, then click "Analyze Correlation" to view the visualization</div>
                                 </div>
                             </div>
                         </div>
@@ -91,41 +133,42 @@
                 <div class="row">
                     <!-- Agriculture Controls -->
                     <div class="col-md-3">
-                        <div class="card">
+                        <div class="card control-card">
                             <div class="card-header">
-                                <h5 class="mb-0">Agriculture & Weather Analysis</h5>
+                                <h5 class="mb-0"><i class="fas fa-sliders-h"></i> Analysis Controls</h5>
                             </div>
                             <div class="card-body">
-                                <!-- Crop Selection -->
                                 <div class="mb-3">
-                                    <label for="cropType" class="form-label">Crop Type</label>
-                                    <select class="form-select" id="cropType">
+                                    <label for="region" class="form-label">Region</label>
+                                    <select class="form-select" id="region">
+                                        <option value="">Select Region</option>
+                                        <option value="north">North</option>
+                                        <option value="south">South</option>
+                                        <option value="east">East</option>
+                                        <option value="west">West</option>
+                                    </select>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="crop" class="form-label">Crop Type</label>
+                                    <select class="form-select" id="crop">
                                         <option value="">Select Crop</option>
                                         <option value="wheat">Wheat</option>
                                         <option value="rice">Rice</option>
                                         <option value="corn">Corn</option>
-                                        <option value="soybeans">Soybeans</option>
+                                        <option value="soybean">Soybean</option>
                                     </select>
                                 </div>
-                                <!-- Region Selection -->
-                                <div class="mb-3">
-                                    <label for="region" class="form-label">Region</label>
-                                    <select class="form-select" id="region" disabled>
-                                        <option value="">Select Region</option>
-                                    </select>
-                                </div>
-                                <!-- Weather Metric Selection -->
                                 <div class="mb-3">
                                     <label for="weatherMetric" class="form-label">Weather Metric</label>
                                     <select class="form-select" id="weatherMetric">
                                         <option value="temperature">Temperature</option>
                                         <option value="rainfall">Rainfall</option>
                                         <option value="humidity">Humidity</option>
-                                        <option value="soil_moisture">Soil Moisture</option>
+                                        <option value="sunshine">Sunshine Hours</option>
                                     </select>
                                 </div>
-                                <button id="analyzeAgriculture" class="btn btn-primary w-100" disabled>
-                                    Analyze Correlation
+                                <button id="analyzeAgriculture" class="btn btn-primary w-100">
+                                    <i class="fas fa-chart-line"></i> Analyze Correlation
                                 </button>
                             </div>
                         </div>
@@ -133,10 +176,9 @@
 
                     <!-- Agriculture Visualization Area -->
                     <div class="col-md-9">
-                        <div class="card">
+                        <div class="card visualization-card">
                             <div class="card-body">
                                 <div id="agricultureVisualization" style="width: 100%; height: 600px;">
-                                    <div class="alert alert-info">Please select a crop type, region, and weather metric, then click "Analyze Correlation" to view the visualization</div>
                                 </div>
                             </div>
                         </div>
@@ -145,6 +187,39 @@
             </div>
         </div>
     </div>
+
+    <!-- Footer -->
+    <footer class="footer mt-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h5><i class="fas fa-chart-line"></i> DataViz Platform</h5>
+                    <p>Empowering data-driven decisions through interactive visualizations and cross-reference analysis.</p>
+                </div>
+                <div class="col-md-4">
+                    <h5>Quick Links</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#tech">Tech & Finance</a></li>
+                        <li><a href="#agriculture">Agriculture & Weather</a></li>
+                        <li><a href="#about">About</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-4">
+                    <h5>Connect With Us</h5>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-github"></i></a>
+                        <a href="#"><i class="fab fa-linkedin"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row mt-3">
+                <div class="col-12 text-center">
+                    <p class="mb-0">&copy; 2024 DataViz Platform. All rights reserved.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="/static/app.js"></script>
